# zml

./: Dockerfile  MODULE.bazel
examples/benchmark/: main.zig
mlir/dialects/: BUILD.bazel  dialects.zig  sdy.zig
pjrt/: pjrt.zig
zml/: module.zig
