load("@rules_zig//zig:defs.bzl", "zig_library")
load("//bazel:zig.bzl", "zig_cc_test")

zig_library(
    name = "dialects",
    srcs = [
        "arith.zig",
        "func.zig",
        "math.zig",
        "scf.zig",
        "tensor.zig",
    ],
    import_name = "mlir/dialects",
    main = "dialects.zig",
    visibility = ["//visibility:public"],
    deps = [
        ":sdy",
        ":stablehlo",
        "//mlir",
    ],
)

zig_cc_test(
    name = "test",
    deps = [":dialects"],
)

zig_library(
    name = "stablehlo",
    import_name = "mlir/dialects/stablehlo",
    main = "stablehlo.zig",
    visibility = ["//mlir/dialects:__subpackages__"],
    deps = [
        "//mlir",
        "//mlir:c",
        "//stdx",
        "@shardy//shardy/integrations/c:sdy_capi", # FIXME:Dialect registration fails
        "@stablehlo//:stablehlo_dialect_capi",
    ],
)

zig_cc_test(
    name = "stablehlo_test",
    deps = [":stablehlo"],
)

zig_library(
    name = "sdy",
    import_name = "mlir/dialects/sdy",
    main = "sdy.zig",
    visibility = ["//mlir/dialects:__subpackages__"],
    deps = [
        "//mlir",
        "//mlir:c",
        "//stdx",
        "@shardy//shardy/integrations/c:sdy_capi",
    ],
)
